fix: 채팅 거래완료 처리 및 거래 완료 시 채팅 불가